--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ main{
 }
 
 .list_currency_item:last-child{
-    border: none;
+    border: none;  
 }
 
 .list_currency_select{
@@ -133,11 +133,19 @@ main{
 .block_input{
     border: 1px solid #E5E5E5;
     border-radius: 5px;
-    padding-left: 14px;
-    padding-bottom: 14px;
+    padding:14px;
+    padding-top:0;
 }
 
 .input_currency{
+    width: 100%;
+    height: 60px;
+    border: none;
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.output_currency{
     width: 100%;
     height: 60px;
     border: none;
@@ -156,4 +164,12 @@ main{
     background-color: #833AE0;
     color: white;
 }
-
+select{
+    background: transparent;
+}
+.selected select{
+    color: #fff;
+}
+.selected select option{
+    color: #000;
+}
